# FastAPI

./: 01-hello-world-and-path-parameters.py  02-query-parameters.py  pyproject.toml  test.py
