[tool.poetry]
name = "learning-fast-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.104.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
